--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.104.0"
 uvicorn = "^0.23.2"
 sqlalchemy = "^2.0.22"
 python-decouple = "^3.8"
+alembic = "^1.12.0"
 
 
 [build-system]
