fix docker and migrations

--- a/.env-template
+++ b/.env-template
@@ -1,7 +1,8 @@
-PG_USER=
-PG_PASS=
-PG_DB=
-DATABASE_URL=
-PYTHONPATH=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+PGADMIN_DEFAULT_EMAIL=
+PGADMIN_DEFAULT_PASSWORD=
+DB_URL=
 SECRET_KEY=
 ALGORITHM=
