--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,33 @@
-version: '3.1'
+version: "3.1"
 
 services:
-    postgresql:
-        image: postgres
-        restart: always
-        ports:
-            - 5432:5432
-        environment:
-            POSTGRES_PASSWORD: ${PG_PASS}
-            POSTGRES_USER: ${PG_USER}
-            POSTGRES_DB: ${PG_DB}
-        volumes:
-            - /var/cache/pgdata:/var/lib/postgresql/data
+  app:
+    build:
+      context: .
+    ports:
+      - 8000:8000
+    volumes:
+      - ./app:/app
+    command: sh -c "uvicorn main:app --host 0.0.0.0 --reload"
+    depends_on:
+      - postgresql
+    env_file:
+      - ./.env
 
-    pgadmin:
-        image: dpage/pgadmin4
-        environment:
-            PGADMIN_DEFAULT_EMAIL: "admin@gmail.com"
-            PGADMIN_DEFAULT_PASSWORD: "admin"
-        ports:
-            - 5050:80
-        depends_on:
-            - postgresql
+  postgresql:
+    image: postgres
+    ports:
+      - 5432:5432
+    env_file:
+      - ./.env
+    volumes:
+      - /var/cache/postgres_data:/var/lib/postgresql/data
+  
+  pgadmin:
+    image: dpage/pgadmin4
+    env_file:
+      - ./.env
+    ports:
+      - 5050:80
+    depends_on:
+      - postgresql
