import libs to user authenticate

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ python-decouple = "^3.8"
 alembic = "^1.12.0"
 psycopg2-binary = "^2.9.9"
 pytest = "^7.4.2"
+httpx = "^0.25.0"
+passlib = "^1.7.4"
+python-jose = "^3.3.0"
+python-multipart = "^0.0.6"
 
 
 [build-system]
